// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnfurlAutoSettingsForRepo rendering works when repo is unfurled in all channels 1`] = `
Object {
  "actions": Array [
    Object {
      "confirm": Object {
        "dismiss_text": "Cancel",
        "ok_text": "Yes",
        "text": "This will disable automatic rich previews for links you post linking to \`undefined\` in *all* channels",
        "title": "Are you sure?",
      },
      "name": "remove-repo",
      "style": "danger",
      "text": "Disable automatic rich previews",
      "type": "button",
      "value": "12345|integrations/snappydoo",
    },
  ],
  "callback_id": "unfurl-settings-auto",
  "color": "#24292f",
  "mrkdwn_in": Array [
    "text",
  ],
  "text": "Links you post linking to \`integrations/snappydoo\` automatically get a rich preview in all channels.",
  "title": "Automatic rich previews",
}
`;

exports[`UnfurlAutoSettingsForRepo rendering works when repo is unfurled only in some channels 1`] = `
Object {
  "actions": Array [
    Object {
      "confirm": Object {
        "dismiss_text": "Cancel",
        "ok_text": "Yes",
        "text": "This will disable automatic rich previews for links you post linking to \`undefined\` in *all* channels",
        "title": "Are you sure?",
      },
      "name": "remove-repo",
      "style": "danger",
      "text": "Disable automatic rich previews",
      "type": "button",
      "value": "12345|integrations/snappydoo",
    },
  ],
  "callback_id": "unfurl-settings-auto",
  "color": "#24292f",
  "mrkdwn_in": Array [
    "text",
  ],
  "text": "Links you post linking to \`integrations/snappydoo\` automatically get a rich preview in the following channels:
<#C4321>,
<#C1234>",
  "title": "Automatic rich previews",
}
`;
